docs/api/qiskit-ibm-runtime/0.14/qiskit_ibm_runtime.options.ResilienceOptions.mdx
---
title: ResilienceOptions
description: API reference for qiskit_ibm_runtime.options.ResilienceOptions
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.ResilienceOptions
---

# ResilienceOptions

<Class id="qiskit_ibm_runtime.options.ResilienceOptions" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibm-runtime/tree/stable/0.14/qiskit_ibm_runtime/options/resilience_options.py" signature="ResilienceOptions(noise_amplifier=None, noise_factors=None, extrapolator=None)">
  Resilience options.

  **Parameters**

  *   **noise\_factors** (`Optional`\[`Sequence`\[`float`]]) – An list of real valued noise factors that determine by what amount the circuits’ noise is amplified. Only applicable for `resilience_level=2`. Default: `None`, and (1, 3, 5) if resilience level is 2.
  *   **noise\_amplifier** (*DEPRECATED*) – A noise amplification strategy. Currently only
  *   **resilience\_level=2.** (*"LocalFoldingAmplifier" is supported Only applicable for*) – Default: “LocalFoldingAmplifier”.
  *   **extrapolator** (`Optional`\[`Literal`\[‘LinearExtrapolator’, ‘QuadraticExtrapolator’, ‘CubicExtrapolator’, ‘QuarticExtrapolator’]]) – An extrapolation strategy. One of `"LinearExtrapolator"`, `"QuadraticExtrapolator"`, `"CubicExtrapolator"`, `"QuarticExtrapolator"`. Note that `"CubicExtrapolator"` and `"QuarticExtrapolator"` require more noise factors than the default. Only applicable for `resilience_level=2`. Default: `None`, and `LinearExtrapolator` if resilience level is 2.

  ## Attributes

  ### extrapolator

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptions.extrapolator" name="extrapolator" attributeTypeHint="Literal['LinearExtrapolator', 'QuadraticExtrapolator', 'CubicExtrapolator', 'QuarticExtrapolator']" attributeValue="= None" />

  ### noise\_amplifier

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptions.noise_amplifier" name="noise_amplifier" attributeTypeHint="Literal['LocalFoldingAmplifier']" attributeValue="= None" />

  ### noise\_factors

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptions.noise_factors" name="noise_factors" attributeTypeHint="Sequence[float]" attributeValue="= None" />

  ## Methods

  ### validate\_resilience\_options

  <Function id="qiskit_ibm_runtime.options.ResilienceOptions.validate_resilience_options" name="validate_resilience_options" signature="static validate_resilience_options(resilience_options)">
    Validate that resilience options are legal. :raises ValueError: if any resilience option is not supported :raises ValueError: if noise\_amplifier is not in NoiseAmplifierType. :raises ValueError: if extrapolator is not in ExtrapolatorType. :raises ValueError: if extrapolator == “QuarticExtrapolator” and number of noise\_factors \< 5. :raises ValueError: if extrapolator == “CubicExtrapolator” and number of noise\_factors \< 4.

    **Return type**

    `None`
  </Function>
</Class>

